--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>my-second-repo</title>
 </head>
 <body>
-    <h1>she is big mad</h1>
-    <h2>i am along</h2>
-    <h3>she coming to school</h3>
+    <h1>how to many people</h1>
+    <h2>this is my shirt</h2>
+    <h3>i coming to collage</h3>
 </body>
 </html>
