--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>how to many people</h1>
     <h2>this is my shirt</h2>
     <h3>i coming to collage</h3>
+    <h1>wellcome to kalabri</h1>
+    <h2>ki korbea bolo</h2>
+    <h3>jani mon vlo na</h3>
 </body>
 </html>
