--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <title>my-second-repo</title>
 </head>
 <body>
-    <h1>how to many people</h1>
-    <h2>this is my shirt</h2>
-    <h3>i coming to collage</h3>
+    
     <h1>wellcome to kalabri</h1>
     <h2>ki korbea bolo</h2>
     <h3>jani mon vlo na</h3>
+    <p>ki ja kori vai kisu vlo lagsea na</p>
 </body>
 </html>
