--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>my-second-repo</title>
 </head>
 <body>
-    
-    <h1>wellcome to kalabri</h1>
-    <h2>ki korbea bolo</h2>
-    <h3>jani mon vlo na</h3>
-    <p>ki ja kori vai kisu vlo lagsea na</p>
+    <h1>ki holo ki korbo</h1>
+    <h2>jani ki hobea</h2>
+    <h3>vholbo na torea</h3>
 </body>
 </html>
