--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-second-repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>ki holo ki korbo</h1>
     <h2>jani ki hobea</h2>
     <h3>vholbo na torea</h3>
+    <p>jani mon vlo na too ami ki korbo tai bolo</p>
 </body>
 </html>
