--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my-second-repo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" herf="style.css">
+   
 </head>
 <body>
     <h1>ki holo ki korbo</h1>
