--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
    
 </head>
 <body>
-    <h1>ki holo ki korbo</h1>
+    <h1>ki holo ki korbo github.com</h1>
     <h2>jani ki hobea</h2>
     <h3>vholbo na torea</h3>
-    <p>jani mon vlo na too ami ki korbo tai bolo</p>
+    <p class="jani">jani mon vlo na too ami ki korbo tai bolo</p>
 </body>
 </html>
