--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my-second-repo</title>
-    <link rel="stylesheet" herf="style.css">
+    <title>my second github repo</title>
+    <link rel="stylesheet" href="style.css">
+   
    
 </head>
 <body>
     <h1>ki holo ki korbo github.com</h1>
     <h2>jani ki hobea</h2>
     <h3>vholbo na torea</h3>
-    <p class="jani">jani mon vlo na too ami ki korbo tai bolo</p>
+    <p>jani mon vlo na too ami ki korbo tai bolo</p>
+    <p>she is also mad kirdsl kfdkislk</p>
 </body>
 </html>
