--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
     <h1>ki holo ki korbo github.com</h1>
     <h2>jani ki hobea</h2>
-    <h3>vholbo na torea</h3>
+    <h3>vholbo na torea change to green</h3>
     <p>jani mon vlo na too ami ki korbo tai bolo</p>
     <p>she is also mad kirdsl kfdkislk</p>
+    <img src="pagol.jpg" alt="">
+    <img src="tom.jpg" alt="">
 </body>
 </html>
