--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h3>vholbo na torea change to green</h3>
     <p>jani mon vlo na too ami ki korbo tai bolo</p>
     <p>she is also mad kirdsl kfdkislk</p>
+    <img src="images/cow.jpg" alt="">
     <img src="pagol.jpg" alt="">
     <img src="tom.jpg" alt="">
 </body>
